gap fix continued

--- a/assets/css/stylemobile.css
+++ b/assets/css/stylemobile.css
@@ -46,8 +46,8 @@ line-height: 15px;
 }
 
 .content-container {
-padding: 5px;
-width: 90%;
+padding-top: 10px;
+width: 80%;
 float: left;
 height: auto;
 margin-left: 10%;
@@ -157,6 +157,7 @@ background-position: center;
 height: auto;
 width: 100%;
 margin-bottom: 80px;
+padding: 0;
 }
 
 .img-circle {
